<resources>
    <string name="app_name">MovieDB</string>
    <string name="error_show_image_home">Fail to load movies. Please check your connection!</string>
    <string name="title_favorite_menu">Favorite</string>
    <string name="title_search_menu">Search</string>
    <string name="label_director">Director:</string>
    <string name="label_actors">Actors:</string>
    <string name="text_add_to_favorite">Add to Favorite</string>
    <string name="text_related">RELATED</string>
    <string name="error_show_movie_detail">Fail to display some information!</string>
    <string name="error_play_trailer">Play video failed. Please check your connection.</string>
    <string name="text_label_profile">PROFILE</string>
    <string name="label_place_of_birth">Place of birth</string>
    <string name="label_date_of_birth">Date of birth</string>
    <string name="text_no_result">No result!</string>
</resources>
