<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.PersonActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_label_profile"
            android:textColor="@color/black_all_text"
            android:textSize="@dimen/size_title_toolbar"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="@dimen/width_image_profile"
            android:layout_height="@dimen/high_image_profile"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_top_panel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/text_person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_panel"
            android:layout_marginTop="@dimen/margin_top_panel"
            android:textColor="@color/black_all_text"
            android:textSize="@dimen/size_movie_title_18dp"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/text_label_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_panel"
            android:layout_marginTop="@dimen/margin_top_panel"
            android:text="@string/label_date_of_birth"
            android:textColor="@color/black_all_text"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/text_person_name" />

        <TextView
            android:id="@+id/text_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_panel"
            android:layout_marginTop="@dimen/margin_all_content"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/text_label_dob" />

        <TextView
            android:id="@+id/text_label_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_panel"
            android:layout_marginTop="@dimen/margin_top_panel"
            android:text="@string/label_place_of_birth"
            android:textColor="@color/black_all_text"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/text_dob" />

        <TextView
            android:id="@+id/text_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_panel"
            android:layout_marginTop="@dimen/margin_all_content"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/text_label_place" />

        <TextView
            android:id="@+id/text_related_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            android:text="@string/text_related"
            android:textColor="@color/black_all_text"
            android:textSize="@dimen/size_group_label_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_biography" />

        <TextView
            android:id="@+id/text_biography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            android:layout_marginEnd="@dimen/margin_all_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_profile" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_related_label" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/width_more_icon"
            android:layout_height="@dimen/high_more_icon"
            android:layout_marginStart="@dimen/margin_start_more_icon"
            android:layout_marginBottom="@dimen/margin_bottom_more_icon"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintStart_toEndOf="@+id/text_related_label"
            app:srcCompat="@drawable/ic_more_icon" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
