<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.movie_detail.MovieDetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_trailer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/high_slider" />

        <ImageView
            android:id="@+id/image_play_icon"
            android:layout_width="@dimen/width_icon_play"
            android:layout_height="@dimen/high_icon_play"
            app:layout_constraintBottom_toBottomOf="@+id/image_trailer"
            app:layout_constraintEnd_toEndOf="@+id/image_trailer"
            app:layout_constraintStart_toStartOf="@+id/image_trailer"
            app:layout_constraintTop_toTopOf="@+id/image_trailer"
            app:srcCompat="@drawable/ic_play" />
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <TextView
            android:id="@+id/text_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            android:layout_marginEnd="@dimen/margin_all_content"
            android:textColor="@color/black_all_text"
            android:textSize="@dimen/size_movie_title_18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_trailer" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_movie_title" />

        <TextView
            android:id="@+id/text_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            app:layout_constraintStart_toEndOf="@+id/text_year"
            app:layout_constraintTop_toBottomOf="@+id/text_movie_title" />

        <TextView
            android:id="@+id/text_overview"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            android:layout_marginEnd="@dimen/margin_all_content"
            android:layout_marginBottom="@dimen/margin_all_content"
            android:textColor="@color/black_all_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_genres"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_label_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            android:text="@string/label_director"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_overview" />

        <TextView
            android:id="@+id/text_label_actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            android:text="@string/label_actors"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_director" />

        <TextView
            android:id="@+id/text_label_related"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            android:text="@string/text_related"
            android:textColor="@color/black_all_text"
            android:textSize="@dimen/size_group_label_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_actor" />

        <TextView
            android:id="@+id/text_name_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            app:layout_constraintStart_toEndOf="@+id/text_label_director"
            app:layout_constraintTop_toBottomOf="@+id/text_overview" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            app:layout_constraintStart_toEndOf="@+id/text_label_actor"
            app:layout_constraintTop_toBottomOf="@+id/text_name_director" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_related"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_all_content"
            android:layout_marginTop="@dimen/margin_all_content"
            android:layout_marginEnd="@dimen/margin_all_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_related" />

        <ImageView
            android:id="@+id/image_add_icon"
            android:layout_width="@dimen/width_icon_add"
            android:layout_height="@dimen/high_icon_add"
            android:layout_marginTop="@dimen/margin_all_content"
            android:layout_marginEnd="@dimen/margin_end_icon_add"
            app:layout_constraintEnd_toEndOf="@+id/text_label_add"
            app:layout_constraintTop_toBottomOf="@+id/text_overview"
            app:srcCompat="@drawable/ic_add" />

        <TextView
            android:id="@+id/text_label_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_all_content"
            android:layout_marginEnd="@dimen/margin_all_content"
            android:text="@string/text_add_to_favorite"
            android:textSize="@dimen/size_text_add_to_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_add_icon" />

        <ImageView
            android:id="@+id/image_more_icon"
            android:layout_width="@dimen/width_more_icon"
            android:layout_height="@dimen/high_more_icon"
            android:layout_marginStart="@dimen/margin_start_more_icon"
            android:layout_marginBottom="@dimen/margin_bottom_more_icon"
            app:layout_constraintBottom_toTopOf="@+id/recycle_related"
            app:layout_constraintStart_toEndOf="@+id/text_label_related"
            app:srcCompat="@drawable/ic_more_icon" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
